--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,4 +11,43 @@ ja:
         phone_number: 電話番号
       post:
         content: 内容
+      user:
+        name: 名前
+        phone_number: 電話番号
+        current_password: 現在のパスワード
+        email: Eメール
+        password: パスワード
+        password_confirmation: パスワード（確認用）
+      admin:
+        name: 名前
+        phone_number: 電話番号
+        current_password: 現在のパスワード
+        email: Eメール
+        password: パスワード
+        password_confirmation: パスワード（確認用）
+  devise:
+    failure:
+      already_authenticated: すでにログインしています。
+    registrations:
+      new:
+        sign_up: アカウント登録
+      signed_up: アカウント登録が完了しました。
+      updated: アカウント情報を変更しました。
+    sessions:
+      already_signed_out: 既にログアウト済みです。
+      new:
+        sign_in: ログイン
+      signed_in: ログインしました。
+      signed_out: ログアウトしました。
+  errors:
+    messages:
+      already_confirmed: は既に登録済みです。ログインしてください。
+      confirmation_period_expired: の期限が切れました。%{period} までに確認する必要があります。 新しくリクエストしてください。
+      expired: の有効期限が切れました。新しくリクエストしてください。
+      not_found: は見つかりませんでした。
+      not_locked: はロックされていません。
+      not_saved:
+        one: エラーが発生したため %{resource} は保存されませんでした。
+        other: "%{count} 件のエラーが発生したため会員登録ができませんでした。"
+
 
