google account error message

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -50,6 +50,9 @@ ja:
         sign_in: ログイン
       signed_in: ログインしました。
       signed_out: ログアウトしました。
+    omniauth_callbacks:
+      failure: "%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）"
+      success: "%{kind} アカウントによる認証に成功しました。"
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
